Fixed form links and spacing

--- a/src/assets/less/camps.less
+++ b/src/assets/less/camps.less
@@ -312,6 +312,23 @@
             max-width: (1280/16rem);
         }
         .cs-item {
+            grid-column: span 8;
+        }
+
+        .cs-picture {
+            /* 180px - 348px */
+            height: clamp(11.75rem, 25vw, 21.75rem);
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #collection-1579 {
+        .cs-container {
+            max-width: (1280/16rem);
+        }
+        .cs-item {
             grid-column: span 4;
         }
 
@@ -321,7 +338,169 @@
         }
     }
 }
-    
+ 
+/*-- -------------------------- -->
+<---         Collection         -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #collection-2 {
+        padding: var(--sectionPadding);
+        padding-top: 0;
+
+        a {
+            text-decoration: none;
+        }
+
+        .cs-info .cs-contact-group {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .cs-container {
+            width: 100%;
+            /* changes to 1280px on tablet */
+            max-width: (550/16rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .cs-content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
+        }
+
+        .cs-title {
+            margin: 0;
+        }
+
+        .cs-topper {
+            color: var(--primary);
+        }
+
+        .cs-card-group {
+            list-style: none;
+            width: 100%;
+            margin: auto;
+            padding: 0;
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);                                       /* WHEN LIVE CHANGE THIS TO 12 INSTEAD OF 8 */
+            gap: clamp(1rem, 3vw, 1.25rem);
+        }
+
+        .cs-item {
+            text-align: center;
+            max-width: 100%;
+            grid-column: span 12;
+            position: relative;
+
+            &:hover {
+
+                .cs-category {
+                    color: var(--primary);
+                }
+            }
+        }
+
+        .cs-link {
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .cs-picture {
+            width: 100%;
+            height: 62vw;
+            max-height: (348/16rem);
+            /* 16px - 20px */
+            margin: 0 0 clamp(1rem, 2.3vw, 1.25rem);
+            background-color: #000;
+            overflow: hidden;
+            display: block;
+            position: relative;
+        
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: opacity .3s, transform .6s;
+            }
+        }
+
+        .cs-category {
+            /* 20px - 25px */
+            font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
+            font-weight: 700;
+            line-height: 1.2em;
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: (8/16rem);
+            color: var(--headerColor);
+            display: flex;
+            justify-content: center;
+            position: relative;
+            transition: color .3s ease;
+
+            &:hover {
+                color: var(--primary);
+            }
+        }
+
+        .cs-quantity {
+            font-size: (16/16rem);
+            line-height: 1.5em;
+            text-align: inherit;
+            color: var(--bodyTextColor);
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #collection-2 {
+        .cs-container {
+            max-width: (1280/16rem);
+        }
+        .cs-item {
+            grid-column: span 8;
+        }
+
+        .cs-picture {
+            /* 180px - 348px */
+            height: clamp(11.75rem, 25vw, 21.75rem);
+        }
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #collection-2 {
+        .cs-container {
+            max-width: (1280/16rem);
+        }
+        .cs-item {
+            grid-column: span 4;
+        }
+
+        .cs-picture {
+            /* 180px - 348px */
+            height: clamp(11.75rem, 25vw, 21.75rem);
+        }
+    }
+}
+
 /*-- -------------------------- -->
 <---          Services          -->
 <--- -------------------------- -*/
